pii-demo/istio-gateway-peer-virtual-service.yml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: pii-demo-gateway
  namespace: pii-demo
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        # don't use a specific server name, or then we can't use NodePort services, due to
        # https://github.com/istio/istio/issues/12545
        - "*"
---
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: default # mandatory for a namespace policy
  namespace: pii-demo
spec:
  mtls:
    mode: STRICT # in this mode, the service can only accept encrypted traffic
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpd-server-virtual-service
  namespace: pii-demo
spec:
  # the destination hosts to which traffic is being sent
  hosts:
    - "pii-demo.apps.hl.test"
  # the name of gateway and sidecar that should apply the route
  gateways:
    - pii-demo-gateway
  http:
    - route:
      - destination:
          host: httpd-server
          port:
            number: 80
